# cmake-introduction

./: .gitignore  README.md
01_excute/: CMakeLists.txt
01_excute/doc/: CMakeLists.txt  README.md
01_excute/inc/: hello.h
01_excute/script/: CMakeLists.txt  start.bat
01_excute/src/: CMakeLists.txt  hello.c  main.cpp
02_library/: CMakeLists.txt
02_library/inc/: CMakeLists.txt  abs.h  swap
02_library/src/: CMakeLists.txt  abs.c  swap.cpp
03_summary/: CMakeLists.txt
03_summary/src/: CMakeLists.txt  main.cpp
